--- a/src/app/i18n/locales/zh/dynamic-feedback.json
+++ b/src/app/i18n/locales/zh/dynamic-feedback.json
@@ -5,10 +5,10 @@
   "showcase.title": "MuseDAM 的动态反馈",
   "showcase.points.0.keyword": "互动式评论",
   "showcase.points.0.description": "团队成员在项目资产上发表评论和回复，促进项目讨论。",
-  "showcase.points.1.keyword": "Private Space Management",
-  "showcase.points.1.description": "Private space administrators have the autonomy to activate or deactivate these areas, providing a secure environment for sensitive projects.",
-  "showcase.points.2.keyword": "Customizable Shared Space Permissions",
-  "showcase.points.2.description": "Customize folder access in your team's shared space to meet the specific needs of members and departments with granular permissions: Edit, Upload, View, and Download.",
+  "showcase.points.1.keyword": "私人空间管理",
+  "showcase.points.1.description": "私人空间管理员有权自主激活或停用这些区域，为敏感项目提供一个安全的工作环境。",
+  "showcase.points.2.keyword": "可定制的共享空间权限",
+  "showcase.points.2.description": "您可以根据团队成员和部门的具体需求，定制团队共享空间中的文件夹访问权限，包括编辑、上传、查看和下载等细粒度权限。",
   "text-display.title": "MuseDAM 动态反馈：让团队沟通更高效",
   "text-display.points.0.keyword": "项目深度评论",
   "text-display.points.0.description": "利用高级评论工具，简化沟通流程。",
