fix: en hero.all-title

--- a/src/app/i18n/locales/en/landing-page.json
+++ b/src/app/i18n/locales/en/landing-page.json
@@ -1,6 +1,7 @@
 {
   "hero.title": "Smart Asset Management",
   "hero.subtitle": "for the AI Content Era",
+  "hero.all-title": "Smart Asset Management for the AI Content Era",
   "hero.button.start": "Start for free",
   "hero.sub-banner.title": "AI-Powered Asset Management",
   "hero.sub-banner.subtitle": "Dive into the future of asset management with MuseDAM's cutting-edge AI system. Experience intelligent search, insightful smart parsing, and a robust suite of creative tools, all enhanced by our interactive MuseCopilot for a seamless experience.",
