deploy region should be set on server end

--- a/src/components/About/policy/China/privacy.mdx
+++ b/src/components/About/policy/China/privacy.mdx
@@ -45,9 +45,9 @@
 **个人敏感信息**是指一旦泄露、非法提供或滥用可能危害人身和财产安全，极易导致个人名誉、身心健康受到损害或歧视性待遇等的个人信息。包括身份证件号码、个人生物识别信息、银行账号、财产信息、行踪轨迹、交易信息、14 岁以下（含）儿童信息等的个人信息等。
 
 本隐私政策中涉及个人敏感信息包括：
+
 <u>
-- **网页浏览记录**
-- **个人财产信息：交易和消费记录（订单号、类型、标价、付费金额、消费时间）**
+  - **网页浏览记录** - **个人财产信息：交易和消费记录（订单号、类型、标价、付费金额、消费时间）**
 </u>
 我们仅会出于以下目的，收集和使用您的个人信息：
 
@@ -55,12 +55,12 @@
 
 1. **我们的产品和/或服务包括一些核心功能，这些功能包含了实现成为我们用户所必须的功能。** 我们可能会收集、保存和使用下列与您有关的信息才能实现下述这些功能。如果您不提供相关信息，您将无法成为我们的注册用户，享受我们的核心功能，但不影响您以游客身份使用浏览、搜索服务。这些功能包括：
 
-|**产品**| **个人信息类型** | **用途** | **地址** |
-|:----|:--------|:--------|:--------|
-| **MuseAI** | 手机号、电子邮箱、微信/飞书/钉钉/企业微信授权信息、网页浏览记录、交易和消费记录 | 注册/登录；接收服务通知；在线支付 | https://museai.cc |
-| **MuseDAM** | 手机号、电子邮箱、微信/飞书/钉钉/企业微信授权信息、网页浏览记录、交易和消费记录 | 注册/登录；接收服务通知；在线支付 |https://musedam.cc |
-| **MuseTransfer** | 手机号、电子邮箱、微信/飞书/钉钉/企业微信授权信息、网页浏览记录、交易和消费记录 | 注册/登录；接收服务通知；在线支付 |  https://musetransfer.com |
-| **MuseLink** | 手机号、微信授权信息、网页浏览记录 | 注册/登录；接收服务通知 | https://muselink.cc |
+| **产品**         | **个人信息类型**                                                                | **用途**                          | **地址**                 |
+| :--------------- | :------------------------------------------------------------------------------ | :-------------------------------- | :----------------------- |
+| **MuseAI**       | 手机号、电子邮箱、微信/飞书/钉钉/企业微信授权信息、网页浏览记录、交易和消费记录 | 注册/登录；接收服务通知；在线支付 | https://museai.cc        |
+| **MuseDAM**      | 手机号、电子邮箱、微信/飞书/钉钉/企业微信授权信息、网页浏览记录、交易和消费记录 | 注册/登录；接收服务通知；在线支付 | https://musedam.cc       |
+| **MuseTransfer** | 手机号、电子邮箱、微信/飞书/钉钉/企业微信授权信息、网页浏览记录、交易和消费记录 | 注册/登录；接收服务通知；在线支付 | https://musetransfer.com |
+| **MuseLink**     | 手机号、微信授权信息、网页浏览记录                                              | 注册/登录；接收服务通知           | https://muselink.cc      |
 
 2. 在您使用服务过程中我们会收集以下的信息：
 
@@ -82,17 +82,17 @@
 
 5. **您充分知晓，根据法律法规、国家标准规定，以下情形中，我们可能会依法收集、使用个人信息而无需征得您的授权同意：**
 
-   与我们履行法律法规规定的义务相关的；  
-   与国家安全、国防安全直接相关的；  
-   与公共安全、公共卫生、重大公共利益直接相关的；  
-   与刑事侦查、起诉、审判和判决执行等直接相关的；  
-   出于维护您或其他个人的生命、财产等重大合法权益但又很难得到本人同意的；  
-   所收集的个人信息是您自行向社会公众公开的；  
-   根据您的要求签订和履行合同所必需的；  
-   从合法公开披露的信息中收集个人信息的，如合法的新闻报道、政府信息公开等渠道；  
-   维护所提供的产品与/或服务的安全稳定运行所必需的，例如发现、处置产品和/或服务的故障；  
-   为开展合法的新闻报道所必需的；  
-   学术研究机构基于公共利益开展统计或学术研究所必要，且对外提供学术研究或描述的结果时，对结果中所包含的个人信息进行去标识化处理的；  
+   与我们履行法律法规规定的义务相关的；
+   与国家安全、国防安全直接相关的；
+   与公共安全、公共卫生、重大公共利益直接相关的；
+   与刑事侦查、起诉、审判和判决执行等直接相关的；
+   出于维护您或其他个人的生命、财产等重大合法权益但又很难得到本人同意的；
+   所收集的个人信息是您自行向社会公众公开的；
+   根据您的要求签订和履行合同所必需的；
+   从合法公开披露的信息中收集个人信息的，如合法的新闻报道、政府信息公开等渠道；
+   维护所提供的产品与/或服务的安全稳定运行所必需的，例如发现、处置产品和/或服务的故障；
+   为开展合法的新闻报道所必需的；
+   学术研究机构基于公共利益开展统计或学术研究所必要，且对外提供学术研究或描述的结果时，对结果中所包含的个人信息进行去标识化处理的；
    法律法规规定的其他情形。
 
 6. **您个人信息使用的规则**
@@ -129,13 +129,13 @@
 
 - 基于应用程序接口（API）、软件工具开发包（SDK）与第三方进行必要的数据共享，不同版本的第三方SDK会有所不同。关于第三方如何收集、使用您的个人信息，建议您参考第三方SDK的相关服务协议及个人信息保护声明。如果您希望进一步了解我们所接入的第三方SDK情况，请阅读第三方SDK情况说明：
 
-|**序号**| **SDK 名称** | **所属公司** | **收集个人信息类型** | **用途** | **隐私链接** |
-|:----|:--------|:--------|:--------|:--------|:--------|
-| **1** | 微信 SDK |腾讯 | 微信头像、昵称、地区、ID、交易和消费记录 | 登录/微信支付 |https://open.weixin.qq.com/cgi-bin/frame?t=news/protocol_developer_tmpl|
-| **2** | 支付宝（Alipay）SDK |支付宝| 交易和消费记录 | 支付宝支付 |https://opendocs.alipay.com/open/54|
-| **3** | 企业微信SDK |腾讯| 微信头像、姓名、地区、ID、所在部门信息 | 登录| https://gov.weixin.qq.com/privacy |
-| **4** | 飞书SDK |字节|  微信头像、姓名、地区、ID、所在部门信息 | 登录 |https://www.feishu.cn/zh_cn/privacy?lang=zh |
-| **5** | 钉钉SDK |阿里| 微信头像、姓名、地区、ID、所在部门信息| 登录 |https://terms.alicdn.com/legal-agreement/terms/suit_bu1_dingtalk/suit_bu1_dingtalk202010070946_49604.html|
+| **序号** | **SDK 名称**        | **所属公司** | **收集个人信息类型**                     | **用途**      | **隐私链接**                                                                                              |
+| :------- | :------------------ | :----------- | :--------------------------------------- | :------------ | :-------------------------------------------------------------------------------------------------------- |
+| **1**    | 微信 SDK            | 腾讯         | 微信头像、昵称、地区、ID、交易和消费记录 | 登录/微信支付 | https://open.weixin.qq.com/cgi-bin/frame?t=news/protocol_developer_tmpl                                   |
+| **2**    | 支付宝（Alipay）SDK | 支付宝       | 交易和消费记录                           | 支付宝支付    | https://opendocs.alipay.com/open/54                                                                       |
+| **3**    | 企业微信SDK         | 腾讯         | 微信头像、姓名、地区、ID、所在部门信息   | 登录          | https://gov.weixin.qq.com/privacy                                                                         |
+| **4**    | 飞书SDK             | 字节         | 微信头像、姓名、地区、ID、所在部门信息   | 登录          | https://www.feishu.cn/zh_cn/privacy?lang=zh                                                               |
+| **5**    | 钉钉SDK             | 阿里         | 微信头像、姓名、地区、ID、所在部门信息   | 登录          | https://terms.alicdn.com/legal-agreement/terms/suit_bu1_dingtalk/suit_bu1_dingtalk202010070946_49604.html |
 
 - 应您需求的共享：应您需求为您处理您与他人的纠纷或争议而进行的共享。
 
@@ -183,11 +183,11 @@
 
 - 我们在中华人民共和国境内运营中收集和产生的个人信息，存储在中国境内。如果发生数据的跨境传输，我们会单独向您以推送通知、弹窗或邮件的方式告知您数据出境的目的、接收方等，并征得您的授权同意，我们会确保数据接收方有充足的数据保护能力来保护您的个人信息。我们承诺您个人信息的存储时间始终处于合理必要期限内。
 
-- **如果我们终止服务或运营，我们会至少提前三十日向您通知，并在终止服务或运营后对您的个人信息进行删除或匿名化处理，但以下情况除外：
+- \*\*如果我们终止服务或运营，我们会至少提前三十日向您通知，并在终止服务或运营后对您的个人信息进行删除或匿名化处理，但以下情况除外：
 
 - 遵从法律法规有关信息留存的要求（例如：《网络安全法》规定：采取监测、记录网络运行状态、网络安全事件的技术措施，并按照规定留存相关的网络日志不少于六个月）；
 
-- 出于财务、审计、争议解决等目的需要合理延长期限的。**
+- 出于财务、审计、争议解决等目的需要合理延长期限的。\*\*
 
 # 五、您如何管理您的个人信息
 
@@ -256,9 +256,9 @@ MUSE 团队非常重视您对个人信息的关注，并尽全力保护您对于
 如您对本隐私政策或您个人信息的相关事宜有任何问题、意见或建议，请联系随时联系我们。
 
 **联系方式：**
+
 - **企业微信（网页底部-联系我们）**
 - **邮箱：contact@museai.io**
-
 
 **联系地址：上海市徐汇区龙耀路175号星扬西岸中心21F**
 
