--- a/src/components/About/policy/China/terms.mdx
+++ b/src/components/About/policy/China/terms.mdx
@@ -2,7 +2,9 @@
 
 【Muse】服务是由特赞（上海）信息科技有限公司（以下简称“我们”或“Muse 团队”）独立开发，旨在为您提供内容上传、存储、管理、分享等服务。任何单位或个人使用 Muse 服务之前，应当认真阅读并严格遵守本协议的全部内容（尤其是加粗和/或下划线的内容）。本协议适用于您使用的各项服务和软件和的任何后续升级/更新的版本。我们有权在法律范围内不定期修订本协议的内容，如果您不同意本协议的内容，您有权停止使用我们的产品，<u>**您一旦勾选「我已阅读并同意服务协议」或使用【Muse 服务】，即视为您同意遵守本协议中的全部内容。**</u>
 
-<u>**若您未满18周岁，请在您的法定监护人陪同下阅读本协议，并在征得您法定监护人同意的前提下使用【Muse】服务。**</u>
+<u>
+  **若您未满18周岁，请在您的法定监护人陪同下阅读本协议，并在征得您法定监护人同意的前提下使用【Muse】服务。**
+</u>
 
 【Muse】服务包括但不限于 MuseAI、MuseTransfer、MuseLink、MuseDAM、MuseArt。
 
@@ -13,7 +15,7 @@
 
 **MuseDAM**
 
-- https://musedam.cc
+- https://www.musedam.cc
 - 面向「创意工作者」的云端数字资产管理器（DAM=Digital Asset Management）旨在提高创意工作者的工作效率。赋能灵感收集、资源管理、素材查找、协作等场景。
 
 **MuseTransfer**
@@ -36,6 +38,7 @@
 # 账号管理
 
 **1.账号注册及登录使用**
+
 - 您首次使用【MuseAI】、【MuseDAM】服务时需要按页面提示完成全部账号注册程序。若您为个人用户，您可以选择手机号验证、微信扫码的方式完成注册；若您已购买团队版服务，您可以使用企业邮箱进行登录；我们为企业客户提供 SSO （飞书、钉钉、企业微信）登录配置服务，您可输入企业域名进行登录。
 - 在您完成注册程序或以其他方式使用本服务时，您应当是具备完全民事权利能力和完全民事行为能力的自然人、法人或其他组织。
 - 您应妥善保管您的登录账号、密码、验证码等账号信息，我们不会主动问您索要您的账号登录密码、手机验证码。所有通过该账号执行的操作均视为您本人的行为，由此产生的后果（包括但不限于账号被盗、密码泄露等）由您自行承担。
@@ -43,6 +46,7 @@
 - 账号设置的具体路径为<u>**点击【右上角账号头像-账号设置】**</u>，您可修改您的头像、昵称；设置或修改登录密码；修改绑定的手机号或者解除绑定的微信；您可点击【右上角账号头像】查阅目前您的算力点数、订单记录等。
 
 **2.账号冻结、注销及申诉**
+
 - 【冻结】：当发生如下情况时，我们有权冻结您的账号，我们将通过邮件、短信、电话、网页弹窗或其他方式通知您：（1）您违反本协议或【Muse】服务其他协议/条款/产品使用规则的；（2）我们根据合理分析及判断您的账户操作行为存在异常的；（3）您的行为遭到他人投诉或举报，且对方已经提供了相关证据，您未按照我们的要求在指定期限内提供相反证据的；（4）政府/司法机关要求进行冻结的；（5）其他违反国家法律、法规、政策规定的。
 - 【注销】：您可以点击【右上角账号头像-账号设置】进行【注销账号】，<u>**请您注意，一旦注销了 Muse 账号，您的 MuseDAM 个人空间、该账号所在的团队空间，及 MuseTransfer、MuseAI 内的所有文件、分享链接，或是智能生成的内容都将会被永久删除。您仍应对注销账号前使用【Muse】服务期间的行为承担相应责任。**</u>当发生如下情况时，您的账号将被注销：（1）国家权力机关强制要求的；（2）您个人申请/操作注销程序的；（3）您违反本协议或【Muse】服务其他协议/条款/规则，您的账号被冻结，我们在向您发送书面通知后的30日内您未作出任何明确反馈的；（4）您的账号已经连续【24】个月未登录，且不存在任何未到期/未使用的服务的，我们有权给您发送书面通知后的15个工作日内对您的账号完成注销程序。
 - 【申诉】：发生上述账号冻结或注销情况，您应及时予以关注，若您有异议的，您可以按照本协议第九条的联系方式向我们进行申诉，为了您的账户安全，您应配合我们如实提供身份证明及相关材料，以便我们进行核实。在接到您的申诉申请后，我们将15个工作日内进行处理，您充分理解，我们有权按照合理的判断同意或驳回您的申诉请求。
@@ -56,21 +60,21 @@
 您理解，【Muse】服务之外与相关网络服务有关的设备（如个人电脑、手机、及其他与接入互联网或移动网有关的装置）及所需的费用（如为接入互联网而支付的电话费及上网费、为使用移动网而支付的手机费）均应由您自行负担。<u>**【Muse】服务无法控制经由本服务传送之内容，也无法对您的使用行为进行全面控制，因此不能保证内容的合法性、正确性、完整性、真实性或品质；您已预知使用本服务时，可能会接触到不合法、不适当等内容，并同意将自行加以判断并承担所有风险。**</u>
 
 您上传、输入、发布、传输、存储、下载、分享、收集、智能生成、编辑或以其他方式使用的内容中不应当包含以下内容：
+
 <u>
-- 反对宪法所确定的基本原则的；
-- 泄露国家秘密，危害国家安全或者损害国家荣誉和利益的；
-- 颠覆国家政权，或者危害国家统一、主权和领土完整的；
-- 煽动民族仇恨、民族种族歧视，破坏民族团结，或者侵害民族风俗、习惯的；
-- 歪曲、丑化、亵渎、否定英雄烈士事迹和精神，以侮辱、诽谤或其他方式侵害英雄烈士的姓名、肖像、名誉、荣誉的；
-- 破坏国家宗教政策，宣扬恐怖主义、极端主义、邪教和封建迷信的；
-- 散布谣言，扰乱社会秩序，破坏社会稳定的；
-- <u>含有虚假、诈骗或以诈骗为目的、侵犯他人隐私的、骚扰、侵害、中伤、粗俗、猥亵、或其它道德上令人反感的内容；</u>
-- 宣传淫秽、色情、赌博、暴力、凶杀、恐怖或者教唆犯罪的；
-- <u>恶意的、挑衅性的文件和商业广告，包括但不限于垃圾邮件、垃圾短信息；</u>
-- <u>超越营业执照经营范围，非法经营的；</u>
-- 侮辱或者诽谤他人，侵害他人合法权益的；
-- 危害社会公德或者民族优秀文化传统的；
-- 含有法律、行政法规禁止的其他内容的。
+  - 反对宪法所确定的基本原则的； - 泄露国家秘密，危害国家安全或者损害国家荣誉和利益的； -
+  颠覆国家政权，或者危害国家统一、主权和领土完整的； -
+  煽动民族仇恨、民族种族歧视，破坏民族团结，或者侵害民族风俗、习惯的； -
+  歪曲、丑化、亵渎、否定英雄烈士事迹和精神，以侮辱、诽谤或其他方式侵害英雄烈士的姓名、肖像、名誉、荣誉的；
+  - 破坏国家宗教政策，宣扬恐怖主义、极端主义、邪教和封建迷信的； -
+  散布谣言，扰乱社会秩序，破坏社会稳定的； -{' '}
+  <u>
+    含有虚假、诈骗或以诈骗为目的、侵犯他人隐私的、骚扰、侵害、中伤、粗俗、猥亵、或其它道德上令人反感的内容；
+  </u>
+  - 宣传淫秽、色情、赌博、暴力、凶杀、恐怖或者教唆犯罪的； -{' '}
+  <u>恶意的、挑衅性的文件和商业广告，包括但不限于垃圾邮件、垃圾短信息；</u>-{' '}
+  <u>超越营业执照经营范围，非法经营的；</u>- 侮辱或者诽谤他人，侵害他人合法权益的； -
+  危害社会公德或者民族优秀文化传统的； - 含有法律、行政法规禁止的其他内容的。
 </u>
 您不得实施以下行为：
 
@@ -92,13 +96,16 @@
 
 您同意并接受，我们有权按照法律法规及相关政府文件的规定，对您通过【Muse】服务产生的内容，包括但不限于文件、信息、图片、视频等，进行主动的监测，对于监测结果，我们有权作出独立的判断，若您违反本服务协议任何一条，我们有权视情节严重程度作出处置措施，包括但不限于发送警告邮件、限制该违规您使用【Muse】功能、暂停为该您提供【Muse】服务、关闭或注销相关账号等，如您对我们的前述处置措施有任何异议的，可与我们联系。如由于您违反上述任何承诺给我们或关联方或合作方造成损失的，您应当承担一切法律责任并向我们或关联方赔偿全部损失，损失包括但不限于因您的违法/违约行为而产生的诉讼费、向任何第三方的合理赔偿、政府或司法机关的罚款及罚金、律师费、合理的差旅费等。您应积极配合国家主管部门和我们进行网络安全事件的跟踪，并提供相关合法的数据和资料。
 
-<u>**在任何情况下，我们均不就因【Muse】服务所发生的任何直接性、间接性、后果性、惩戒性、偶然性、特殊性的损害 (包括但不限于：您使用本服务而遭受的利润损失)，承担任何责任(即使您已事先被告知该等损害发生的可能性)。**</u>
+<u>
+  **在任何情况下，我们均不就因【Muse】服务所发生的任何直接性、间接性、后果性、惩戒性、偶然性、特殊性的损害
+  (包括但不限于：您使用本服务而遭受的利润损失)，承担任何责任(即使您已事先被告知该等损害发生的可能性)。**
+</u>
 
 # 所有权及知识产权
 
 我们保留【Muse】服务产品<u>及产品所有元素（包括但不限于商标、logo、产品界面、内容、数据、技术、算法、代码等）</u>的所有权及知识产权（包括但不限于著作权、商标权、专利权及相关邻接权）。
 
-**【特别提醒】** 您可以向【MuseAI】提交文本、图片、提示词或其他内容或信息（合称“输入”），【MuseAI】通过AI技术接收或响应您的输入而生成的内容（合称“输出”），对于输出内容的版权归属，请您仔细阅读<a href="https://tezign.feishu.cn/wiki/HYeAwNXlZiHkIQkKnZdcoPI2n3S" target="_blank" rel="noopener noreferrer" style={{color: '#203ffb'}}>【MuseAI版权归属说明】</a>，我们会基于【MuseAI】产品功能模块的更新或调整不定期修订前述说明。您应当特别注意：
+**【特别提醒】** 您可以向【MuseAI】提交文本、图片、提示词或其他内容或信息（合称“输入”），【MuseAI】通过AI技术接收或响应您的输入而生成的内容（合称“输出”），对于输出内容的版权归属，请您仔细阅读<a href="https://tezign.feishu.cn/wiki/HYeAwNXlZiHkIQkKnZdcoPI2n3S" target="\_blank" rel="noopener noreferrer" style={{color: '#203ffb'}}>【MuseAI版权归属说明】</a>，我们会基于【MuseAI】产品功能模块的更新或调整不定期修订前述说明。您应当特别注意：
 
 - **您基于我们服务对输入和/或输出内容的使用独立承担法律责任。为避免疑问，如输入和/或输出本身包含了第三方享有知识产权或其他合法权益的内容，则前述输入和/或输出的相应权利仍由该第三方享有，不改变其权属关系。**
 - 您不得利用我们的服务制作、发布、传播虚假信息。您通过AI工具对外发布或展示相关内容时，应当以显著方式予以标识或提示。
@@ -111,7 +118,9 @@
 
 如果第三方对您上传内容的知识产权归属提出质疑或投诉，您有责任出具相关知识产权证明材料，并配合我们相关投诉处理工作，若经证实，您上传的内容违法或侵犯第三方合法权利的，我们有权将此内容从服务器内删除，停止您对【Muse】服务的访问，并保留对您追究法律责任的权利。
 
-<u>**您知悉并同意，在使用【Muse】服务过程中主动提供的信息内容及相关的上传、浏览、分享、点击等记录将保留在我们的后台，我们有权对您上传的内容进行技术监测，若发现任何违法违规内容的，有权立即停止该您对【Muse】服务的使用，并保留追究法律责任的权利。**</u>
+<u>
+  **您知悉并同意，在使用【Muse】服务过程中主动提供的信息内容及相关的上传、浏览、分享、点击等记录将保留在我们的后台，我们有权对您上传的内容进行技术监测，若发现任何违法违规内容的，有权立即停止该您对【Muse】服务的使用，并保留追究法律责任的权利。**
+</u>
 
 本协议其他条款未明示授权的其他一切权利仍由我们保留，您在行使这些权利时须另外取得我们的书面许可。我们若未行使前述任何权利，并不构成对该权利的放弃。
 
@@ -122,6 +131,7 @@
 【Muse】服务产品保障您传输的文件安全性、私密性。我们努力采用符合业界标准的安全防护措施，包括建立合理的制度规范、安全技术、定期进行安全漏洞扫描来防止您的信息数据遭到未经授权的访问、使用、修改，避免数据的损坏或丢失。
 
 我们不会公开或向第三方提供您存储在【Muse】服务产品上的所有内容，除非有下列情况：
+
 - 实现产品功能所需；
 - 经您书面同意；
 - 有关法律、法规规定或经政府机关依法要求公开；
@@ -144,12 +154,15 @@
 为更好地保护未成年人隐私权益，我们特别提醒您慎重发布包含未成年人的内容，一经发布，即视为您已获得权利人同意在【Muse】产品展示未成年人的肖像等个人信息，且允许我们依据本协议使用、处理该等与未成年人相关的内容。
 
 监护人特别提示
+
 - 如您的被监护人使用【Muse】产品及相关服务的，您作为监护人应指导并监督被监护人的注册和使用行为，如您的被监护人申请【Muse】产品账号，我们将有权认为其已取得您的同意。
 - 您的被监护人在使用【Muse】产品及相关服务时可能使用充值功能。您作为监护人，请保管好您的支付设备、支付账户及支付密码等，以避免被监护人在未取得您同意的情况下通过您的账号使用充值功能。
 
 # 免责声明
 
-<u>**您理解，【MuseAI】生成的所有内容都是由人工智能模型生成，仅供您参考，我们对其生成内容的准确性、完整性和功能性不做任何保证，并且其生成的内容不代表我们的态度或观点，任何由AI工具或技术能力输出的结果，均无法替代您基于自身独特的经验、知识和判断力做出决策。**</u>
+<u>
+  **您理解，【MuseAI】生成的所有内容都是由人工智能模型生成，仅供您参考，我们对其生成内容的准确性、完整性和功能性不做任何保证，并且其生成的内容不代表我们的态度或观点，任何由AI工具或技术能力输出的结果，均无法替代您基于自身独特的经验、知识和判断力做出决策。**
+</u>
 
 我们的服务来自于法律法规允许的包括但不限于公开互联网等信息积累，并已经经过不断的自动及人工敏感数据过滤，但仍不排除其中部分信息具有瑕疵、不合理或引发不快。遇有此情形的，欢迎并感谢您随时通过官方渠道反馈给我们。<u>**您应理解并同意，【MuseAI】服务尚存在不完备性，我们不对任何服务可用性、可靠性做出任何承诺。我们不对您使用【MuseAI】或【MuseAI】服务产出的任何结果承担任何责任，且本服务结果不代表我们立场。**</u>
 
