feat: add pricing page

--- a/src/app/i18n/locales/en/highlight.json
+++ b/src/app/i18n/locales/en/highlight.json
@@ -1,7 +1,7 @@
 {
   "highlight.button": "Start for free",
   "collect.title": "Collect",
-  "collect.description.0": "MuseDAM Collection Plugin, your new sidekick for Chrome, Edge, and 360. Effortlessly collect images, videos, and web pages with drag-and-drop simplicity.",
+  "collect.description.0": "MuseDAM browser extension, your new sidekick for Chrome, Edge, and 360. Effortlessly collect images, videos, and web pages with drag-and-drop simplicity.",
   "collect.description.1": "Streamline your team's content curation and boost collaboration with centralized asset collection. Get ready to transform your workflow with Muse. \uD83D\uDE80 ",
   "organize.title": "Organize",
   "organize.description.0": "Discover MuseDAM — preview 70+ file formats seamlessly, edit in bulk, and organize with smart tags.",
