fix: i18n text and styles

--- a/src/app/i18n/locales/en/pricing.json
+++ b/src/app/i18n/locales/en/pricing.json
@@ -7,7 +7,8 @@
     "pricing.plan.actions.try": "Try for free",
     "contact.copy.success": "Copied successfully",
     "plan.details.storage": "Storage space",
-    "plan.details.storage.hint": "The total capacity of storage space includes MuseAI + MuseDAM",
+    "plan.details.storage.hint": "The total capacity of storage space",
+    "plan.details.storage.hint.zh": "The total capacity of storage space includes MuseAI + MuseDAM",
     "pricing.summary.points.onetime": "One-time {{val}} points",
     "pricing.perMonth": "PER MONTH",
     "pricing.summary.ai": "AI parsing & creation",
@@ -293,7 +294,8 @@
     "pricing.plan.button.buy": "Buy Now",
     "pricing.planMuseDAM.seatCount.hint1": "The number of members that can be added to the team",
     "pricing.planMuseDAM.storage": "Storage space",
-    "pricing.planMuseDAM.storage.hint1": "The total capacity of the storage space includes MuseAI + MuseDAM",
+    "pricing.planMuseDAM.storage.hint": "The total capacity of the storage space",
+    "pricing.planMuseDAM.storage.hint.zh": "The total capacity of the storage space includes MuseAI + MuseDAM",
     "pricing.ppt.hint": "Supported presentation document formats",
     "pricing.ppt.label": "Presentation｜pdf、ppt、pptx、pptm、key、wps",
     "pricing.qr.code.generation": "QR code generation",
@@ -308,15 +310,15 @@
     "pricing.questions.ask0": "What occurs if my storage surpasses 5GB once my PRO plan ends?",
     "pricing.questions.answer0_0": "Your files will still be available in MuseDAM for viewing and downloading. However, you'll lose access to features like collecting, sharing, and transferring. To continue using all features, consider upgrading to MuseDAM 'Pro' or manage your storage by deleting unnecessary files to maintain optimal performance.",
     "pricing.questions.ask1": "Which roles and permissions are available for team members in the Team edition?",
-    "pricing.questions.answer1_0": "As the team owner, you have the flexibility to assign various roles and permissions to your team members, including Admin, Editable, Upload & View/Download, View-Only, and Download-Only access.",
+    "pricing.questions.answer1_0": "As the team owner, you have the flexibility to assign various roles and permissions to your team members, including Admin, Edit, Upload & View/Download, View-Only, and Download-Only access.",
     "pricing.questions.ask2": "What occurs when the team service expires, and do members regain access after renewal?",
     "pricing.questions.answer2_0": "Following the expiration of your team service, your files are safeguarded for 30 days, accessible only by the \"team owner\" for actions such as \"service renewal,\" \"asset downloading,\" or \"asset deletion.\" Beyond this period, the team space will be permanently removed.",
     "pricing.questions.answer2_1": "To maintain your assets and member access, renew within the 30-day window. After renewal, just refresh the page to continue using the service seamlessly.",
     "pricing.questions.ask3": "Why do I need to have MuseDAM open when using the web browser extension to drag and drop images?",
-    "pricing.questions.answer3_0": "The upload process via the plugin is straightforward: Drag and drop images into the plugin → The plugin sends the images to MuseDAM → Images are uploaded within the app.",
-    "pricing.questions.answer3_1": "Ensure that MuseDAM is open and that the plugin has successfully connected to MuseDAM before you start the upload process.",
+    "pricing.questions.answer3_0": "The upload process via the extension is straightforward: Drag and drop images into the extension → The extension sends the images to MuseDAM → Images are uploaded within the app.",
+    "pricing.questions.answer3_1": "Ensure that you have logged in MuseDAM and the system webpage is open and that the extension has successfully connected to MuseDAM before you start the upload process.",
     "pricing.questions.ask4": "What is the limit on the number of devices that can be logged in with one account?",
-    "pricing.questions.answer4_0": "With the free individual plan, you can log in on just 1 device at a time. For both the team plan and the individual PRO plan, you can log in on up to 4 devices simultaneously, across different computers or mobile browsers. If you reach the device limit, you'll see a prompt as indicated. To log in on a new device, simply click to log out of an existing one.",
+    "pricing.questions.answer4_0": "With the free individual plan, you can log in on just 1 device at a time. For both the team plan and the individual PRO plan, you can log in on up to 4 devices simultaneously, across different computers or mobile browsers. If you reach the device limit, simply click to log out of an existing one.",
     "pricing.questions.ask5": "How do I share feedback or suggestions with Muse?",
     "pricing.questions.answer5_0": "Muse adheres to a strategic product roadmap, focusing on the features that are part of our planned development.",
     "pricing.questions.answer5_1": "When you submit a product request, we evaluate it based on its relevance to our broader user community and its potential to add value to Muse. This assessment guides our decisions on whether to develop the feature and how to prioritize it.",
@@ -441,7 +443,7 @@
     "pricing.team_member_management.label": "Team member management",
     "pricing.team_shared_space.hint": "Share the team space to facilitate team collaboration and precipitate the team's digital assets",
     "pricing.team_shared_space.label": "Shared space",
-    "pricing.teamwork": "Teamwork",
+    "pricing.teamwork": "Team Collaboration",
     "pricing.terms": "Service Agreement",
     "pricing.text.hint": "Supported text document formats",
     "pricing.text.label": "Text｜doc、docx、docm",
