--- a/src/app/i18n/locales/zh/pricing.json
+++ b/src/app/i18n/locales/zh/pricing.json
@@ -104,7 +104,8 @@
     "plan.summary.copyright.enterprise": "AI 生成图像素材归属企业",
     "plan.summary.usage_rights": "使用权利：自由使用",
     "plan.details.storage": "存储空间",
-    "plan.details.storage.hint": "存储空间包含 MuseAI+MuseDAM 的总容量",
+    "plan.details.storage.hint": "存储空间的总容量",
+    "plan.details.storage.hint.zh": "存储空间包含 MuseAI+MuseDAM 的总容量",
     "plan.detail.seats.team": "{{val}}人·可扩席",
     "pricing.ai.drawing": "AI 绘图",
     "pricing.inspiration.gallery": "灵感画廊",
@@ -281,7 +282,8 @@
     "pricing.unlimited.quantity.limited.time": "不限数量（限时）",
     "pricing.unlimited.quantity": "不限数量",
     "pricing.planMuseDAM.storage": "存储空间",
-    "pricing.planMuseDAM.storage.hint1": "存储空间包含 MuseAI+MuseDAM 的总容量",
+    "pricing.planMuseDAM.storage.hint": "存储空间的总容量",
+    "pricing.planMuseDAM.storage.hint.zh": "存储空间包含 MuseAI+MuseDAM 的总容量",
     "plan.details.seats": "成员席位",
     "pricing.planMuseDAM.seatCount.hint1": "可加入团队中的成员数量",
     "pricing.planMuseDAM.points": "赠送算力点数",
@@ -468,7 +470,7 @@
     "pricing.questions.answer3_0": "插件上传程序流程：插件拖拽图片 -> 图片传到 MuseDAM 应用内 -> 应用内上传",
     "pricing.questions.answer3_1": "请务必在打开之后等待插件和 MuseDAM 连接成功后再继续操作。",
     "pricing.questions.ask4": "一个账号同时可以登录几个设备？",
-    "pricing.questions.answer4_0": "团队版和个人 PRO 账号：一个账号可以同时登录4个设备，支持用不同的电脑或手机浏览器登录，超过后会有如图所示的提示。点击登出某个设备后可继续登录。",
+    "pricing.questions.answer4_0": "团队版和个人 PRO 账号：一个账号可以同时登录4个设备，支持用不同的电脑或手机浏览器登录，点击登出某个设备后可继续登录。",
     "pricing.questions.ask5": "用户如何向 Muse 提出需求反馈建议？",
     "pricing.questions.answer5_0": "Muse 会有自己的产品路线图，日常优先会做产品路线图上的功能。",
     "pricing.questions.answer5_1": "如果用户提出了一个产品需求，内部会根据该需求适用的用户范围（比如是否大部分用户都有该需求）、或是是否对 Muse 来说具有额外的商业价值来进行内部评估是否需要迭代该功能、或是排期优先级。",
