hide points in mainland

--- a/src/app/i18n/locales/en-US/highlight.json
+++ b/src/app/i18n/locales/en-US/highlight.json
@@ -12,7 +12,7 @@
   "collaborate.list.1": "File Sharing",
   "collaborate.list.2": "Activity Log",
   "collaborate.list.3": "Active Leaderboard",
-  "ai-generate.title": "Generate",
+  "ai-generate.title": "AI-Powered",
   "ai-generate.description.0": "Ignite creativity and streamline workflows with MuseDAM's all-in-one AI toolkit.",
   "ai-generate.point.0.title": "AI Parsing ✨",
   "ai-generate.point.0.description": "Instantly decode your assets for insights, from descriptions to color schemes.",
