--- a/src/app/i18n/locales/zh-CN/highlight.json
+++ b/src/app/i18n/locales/zh-CN/highlight.json
@@ -12,7 +12,7 @@
   "collaborate.list.1": "文件分享",
   "collaborate.list.2": "操作日志",
   "collaborate.list.3": "活跃排行榜",
-  "ai-generate.title": "AI 创作",
+  "ai-generate.title": "AI 能力",
   "ai-generate.description.0": "用 MuseDAM 的 AI 功能激发创意，简化工作流程。",
   "ai-generate.point.0.title": "智能解析 ✨",
   "ai-generate.point.0.description": "自动解析系统内素材，从画面描述、情感氛围、到配色方案",
