feat: Add/Modify multiple package benefits

--- a/src/app/i18n/locales/en-US/pricing.json
+++ b/src/app/i18n/locales/en-US/pricing.json
@@ -66,10 +66,10 @@
   "pricing.ai.features": "AI functions",
   "pricing.ai.tools": "AI tools",
   "pricing.ai.video": "AI video",
-  "pricing.asset_score.hint": "Materials can be rated from 1 to 5 stars",
-  "pricing.asset_score.label": "Asset rating",
+  "pricing.asset_score.hint": "Files can be rated from 1 to 5 stars",
+  "pricing.asset_score.label": "File rating",
   "pricing.asset_tag.hint": "Tags can be added to a single file or in batches. Tag management supports two levels",
-  "pricing.asset_tag.label": "Asset tags",
+  "pricing.asset_tag.label": "File tags",
   "pricing.assets-statistics.hint": "You can view the association between materials and users, including previewing, downloading and sharing",
   "pricing.assets-statistics.label": "Asset data analysis",
   "pricing.assets_users_logs.hint": "You can view team resources and user interaction data to assist content managers in analyzing the health status of assets",
@@ -83,11 +83,11 @@
   "pricing.batch.transfer.of": "Batch transfer the owners of generated works, data sets and models",
   "pricing.batch.transfer.of.hint": "Generated works, datasets, and models can be transferred to owners in batches",
   "pricing.batchDraw.hint": "Suitable for high - level AI users to run pictures in batches",
-  "pricing.batch_edit.hint": "Select multiple files for editing to batch - edit \"remarks\", \"links\", \"tags\" and \"ratings\" and manage materials more efficiently",
-  "pricing.batch_edit.label": "Batch edit: tags, names, folders, star ratings",
+  "pricing.batch_edit.hint": "Select multiple files to edit, then batch edit \"name,\" \"notes,\" \"link,\" \"tags,\" \"rating,\" etc., for more efficient asset management.",
+  "pricing.batch_edit.label": "Batch edit",
   "pricing.batch_rename.label": "Bulk rename",
   "pricing.batch_rename.hint": "You can batch rename by number, date, tag, original name, or replace.",
-  "pricing.batch_tag.label": "Bulk tagging",
+  "pricing.batch_tag.label": "Folder Auto-tagging",
   "pricing.batch_tag.hint": "You can set automatic tags for folders, and assets in the folder will automatically be tagged.",
   "pricing.team_folder_auth.label": "Granular permissions",
   "pricing.team_folder_auth.hint": "Different folders can have permissions assigned to different members: Set specific permissions like edit or view for each folder's members.",
@@ -213,7 +213,7 @@
   "pricing.lipstick.color.test.hint": "You can use close - up shots of the model's lips or half - body models for lipstick color testing",
   "pricing.material.resource.collection": "Collecting",
   "pricing.material_sharing.hint": "Single or multiple files/folders can be shared",
-  "pricing.material_sharing.label": "Asset sharing",
+  "pricing.material_sharing.label": "File sharing",
   "pricing.member.and.department.management": "Member and department management",
   "pricing.member.storage.space": "Member storage space upper limit management",
   "pricing.member.storage.space.and.computing.power.point.usage.management": "Management of member storage space and computing power point usage",
@@ -419,9 +419,15 @@
   "pricing.team.folder.permissions": "Team folder permissions",
   "pricing.team.generation.works": "Team - generated works, data set, model management",
   "pricing.team.generation.works.hint": "Generation works, data sets, and model management of all team members",
-  "pricing.team.management": "Team Management",
+  "pricing.team.management": "Enterprise Management",
   "pricing.team.material.library": "Asset library management",
   "pricing.team.material.library.hint": "Team space material library management",
+  "pricing.team_home_page.label": "Enterprise homepage module entry configuration",
+  "pricing.team_home_page.hint": "Enterprise exclusive homepage configuration (change background image, layout, quick navigation, etc.)",
+  "pricing.team_group_management.label": "Enterprise group management",
+  "pricing.team_group_management.hint": "Create temporary enterprise groups by project for permission control.",
+  "pricing.team_visitor_and_whitelist.label": "Visitor and whitelist management",
+  "pricing.team_visitor_and_whitelist.hint": "You can set up company visitors and whitelists to share assets with up to 200 specified visitors or whitelist members. Visitors can only view folders they have permission to access.",
   "pricing.team.member.management": "Member management",
   "pricing.team.member.management.hint": "All member information and permissions in the team can be managed",
   "pricing.team.operation.log": "Activity log",
@@ -440,7 +446,7 @@
   "pricing.team_material_library_management.hint": "Team space material library management",
   "pricing.team_material_library_management.label": "Asset library management",
   "pricing.team_member_management.hint": "All member information and permissions in the team can be managed",
-  "pricing.team_member_management.label": "Team member management",
+  "pricing.team_member_management.label": "Enterprise member management",
   "pricing.team_shared_space.hint": "Share the team space to facilitate team collaboration and precipitate the team's digital assets",
   "pricing.team_shared_space.label": "Shared space",
   "pricing.teamwork": "Team Collaboration",
@@ -448,10 +454,14 @@
   "pricing.text.hint": "Supported text document formats",
   "pricing.text.label": "Text｜doc、docx、docm",
   "pricing.transfer.asset.owners": "Bulk transfer of resource ownership",
-  "pricing.transfer.asset.owners.hint": "Resources in the material library can be transferred to new owners in batches",
+  "pricing.transfer.asset.owners.hint": "Batch transfer ownership of assets in the library.",
   "pricing.transfer_asset_owners_in_bulk.hint": "Resources in the material library can be transferred to new owners in batches",
   "pricing.transfer_asset_owners_in_bulk.label": "Bulk transfer of resource ownership",
   "pricing.transfer_quantity.hint": "The number of files that can be transferred and saved at one time for sharing",
+  "pricing.project_management.label": "Project management",
+  "pricing.project_management.hint": "Project/task management, add approvers and due date.",
+  "pricing.approval_entry.label": "Approve entry",
+  "pricing.approval_entry.hint": "Assets can have designated approvers.",
   "pricing.transfer_quantity.label": "Single file sharing limit",
   "pricing.turn.member.invitations": "Enable or disable member invitations",
   "pricing.turn.member.invitations.hint": "Enable or disable the member invitation feature of the team",
@@ -484,14 +494,36 @@
   "pricing.whole_site_watermark_function.hint": "The whole - site watermark function can be turned on or off; after being turned on, custom watermark content will appear on the screen",
   "pricing.whole_site_watermark_function.label": "Enable watermark",
   "pricing.zip_download.hint": "The maximum total file size for a single download package",
-  "pricing.zip_download.label": "Single-batch download ",
+  "pricing.zip_download.label": "Online single-batch download",
+  "pricing.local_app.label": "Local file transfer app",
+  "pricing.local_app.hint": "Supports resumable uploads and downloads; unlike cloud downloads, it's not necessary to package before downloading and there are no size limits for individual asset downloads (cloud downloads can package up to 6G of assets at a time).",
+  "pricing.file_version.label": "Asset version control",
+  "pricing.file_version.hint": "View asset history versions and spec data.",
+  "pricing.file_comment.label": "Asset comments and annotation notes",
+  "pricing.file_comment.hint": "Comment on assets, add circle notes, or @mention relevant members.",
+  "pricing.whitelist_sharing.label": "Share with specified whitelist",
+  "pricing.whitelist_sharing.hint": "Assets can be shared with whitelist accounts.",
+  "pricing.custom_metadata.label": "Custom metadata fields",
+  "pricing.custom_metadata.hint": "Users can customize field types and content in the asset library, such as text, single choice, multiple choice, person, date, number, hyperlink, etc.",
+  "pricing.compliance_check.label": "Compliance check",
+  "pricing.compliance_check.hint": "Legal pornographic content detection, basic advertising law detection, and illegal term detection.",
   "pricing.zip_manage.hint": "Manageable compressed package files",
   "pricing.zip_manage.label": "Zip and other archive management",
   "pricing.points.validity": "Point expiry",
   "pricing.points.validity.hint": "MuseAI points are divided into package points and permanent points. Package points are issued in line with the package cycle; permanent points can be purchased additionally and are valid until depleted",
-  "pricing.ai_search.label": "AI searching",
+  "pricing.ai_search.label": "Smart searching",
   "pricing.ai_search.hint": "Content can be intelligently searched using AI parsing of assets",
   "pricing.ai_analysis.label": "AI parsing",
+  "pricing.ai_smart_rename.label": "AI Smart Renaming",
+  "pricing.ai_auto_smart_parsing.label": "AI Auto Parsing",
+  "pricing.ai_custom_smart_parsing.label": "AI Custom Parsing",
+  "pricing.ai_auto_smart_tagging.label": "AI Auto Tagging",
+  "pricing.ai_custom_smart_tagging.label": "AI Custom Tagging",
+  "pricing.ai_smart_rename.hint": "Rename intelligently based on asset image content.",
+  "pricing.ai_auto_smart_parsing.hint": "When uploading assets, AI will automatically analyze assets with preview images, such as images and design source files.",
+  "pricing.ai_custom_smart_parsing.hint": "Assets can be intelligently parsed according to custom user-defined fields.",
+  "pricing.ai_auto_smart_tagging.hint": "When uploading assets, AI automatically tags assets like images and design source files with preview images.",
+  "pricing.ai_custom_smart_tagging.hint": "Assets can be intelligently tagged according to user-defined requirements.",
   "pricing.ai_analysis.hint": "Can intelligently analyze image assets in the system, such as scene description, main subject, and color scheme",
   "pricing.ai_content.label": "AI content creation",
   "pricing.ai_content.hint": "Summarize content, write articles, etc., for assets or folders",
