--- a/src/app/i18n/locales/zh-CN/pricing.json
+++ b/src/app/i18n/locales/zh-CN/pricing.json
@@ -148,17 +148,17 @@
   "pricing.team.generation.works": "团队生成作品、数据集、模型管理",
   "pricing.team.exclusive.gallery": "团队专属画廊",
   "pricing.batch.transfer.of": "批量转移生成作品、数据集、模型所有者",
-  "pricing.library.collaboration": "素材库协作",
-  "pricing.team.material.library": "团队素材库管理",
-  "pricing.team.folder.member": "团队文件夹成员权限",
-  "pricing.team.folder.department": "团队文件夹部门权限",
+  "pricing.library.collaboration": "资产库协作",
+  "pricing.team.material.library": "共享资产库管理",
+  "pricing.team.folder.member": "文件夹成员权限",
+  "pricing.team.folder.department": "文件夹部门权限",
   "pricing.member.storage.space": "成员存储空间上限管理",
-  "pricing.transfer.asset.owners": "批量转移素材资源所有者",
-  "pricing.team.management": "团队管理",
+  "pricing.transfer.asset.owners": "批量转移文件资产所有者",
+  "pricing.team.management": "企业管理",
   "pricing.custom.corporate.identity": "自定义企业标识",
   "pricing.turn.member.invitations": "开启或关闭成员邀请",
   "pricing.set.member.invitation": "设置成员邀请有效期",
-  "pricing.team.member.management": "团队成员管理",
+  "pricing.team.member.management": "企业成员管理",
   "pricing.invite.specific.members": "邀请指定成员",
   "pricing.team.department.management": "团队部门管理",
   "pricing.import.members.and": "批量导入成员与部门",
@@ -201,10 +201,16 @@
   "pricing.team.exclusive.gallery.hint": "团队归属者和管理者可挑选成员精选生成作品，方便团队快速生成同款，设置团队专属画廊及作品分类",
   "pricing.batch.transfer.of.hint": "可批量将生成作品、数据集、模型转移所有者",
   "pricing.team.material.library.hint": "团队空间素材库管理",
+  "pricing.team_home_page.label": "企业首页模块入口配置",
+  "pricing.team_home_page.hint": "企业专享首页配置（更选择换背景图、布局、快捷跳转等）",
+  "pricing.team_group_management.label": "企业群组管理",
+  "pricing.team_group_management.hint": "可按项目创建企业临时群组，用作权限管控分配",
+  "pricing.team_visitor_and_whitelist.label": "访客及白名单管理",
+  "pricing.team_visitor_and_whitelist.hint": "可设置企业访客及白名单，将素材分享给指定访客或白名单，不超过 200 人。访客仅可查看有权限访问的文件夹。",
   "pricing.team.folder.member.hint": "在团队不同的文件夹上可设置不同的成员访问权限",
   "pricing.team.folder.department.hint": "在团队不同的文件夹上可设置不同的部门访问权限",
   "pricing.member.storage.space.hint": "可设置团队空间中各个成员的拥有的存储空间上限",
-  "pricing.transfer.asset.owners.hint": "可批量将素材库中的资源转移所有者",
+  "pricing.transfer.asset.owners.hint": "可批量将资产库中的资源转移所有者",
   "pricing.custom.corporate.identity.hint": "自定义企业的标识，个性化展示",
   "pricing.turn.member.invitations.hint": "开启或关闭团队的成员邀请功能",
   "pricing.set.member.invitation.hint": "可设置成员邀请链接为：3天、7天、30天或永久有效",
@@ -334,7 +340,9 @@
   "pricing.bigFileManage.hint": "系统内可存储的最大文件",
   "pricing.transfer_quantity.label": "单次转存数量",
   "pricing.transfer_quantity.hint": "单次分享文件可转存的数量",
-  "pricing.zip_download.label": "单次打包下载",
+  "pricing.zip_download.label": "在线单次打包下载",
+  "pricing.local_app.label": "本地文件传输 App",
+  "pricing.local_app.hint": "支持断点上传及下载；与云端下载相比，无需打包后才可下载，且不限制单次下载的素材大小（云端一次最多只能打包 6G 素材进行下载）",
   "pricing.zip_download.hint": "单次下载打包的最大文件总大小",
   "pricing.bin_saved_days.label": "回收站保存天数",
   "pricing.bin_saved_days.hint": "文件删除后在回收站最多保存的天数",
@@ -351,8 +359,12 @@
   "pricing.zip_manage.label": "压缩包管理",
   "pricing.zip_manage.hint": "可管理压缩包文件",
   "pricing.install_manage.label": "安装包管理",
+  "pricing.file_version.label": "素材版本管理",
+  "pricing.file_version.hint": "可查看素材历史版本及规格数据",
+  "pricing.file_comment.label": "素材评论及圈选备注",
+  "pricing.file_comment.hint": "可对素材进行评论、圈选备注，或@相关成员",
   "pricing.install_manage.hint": "可管理安装包文件",
-  "pricing.material_sharing.label": "素材分享",
+  "pricing.material_sharing.label": "文件分享",
   "pricing.material_sharing.hint": "可进行单个、或多个文件/文件夹分享",
   "pricing.number_of_files_shared_per_time.label": "单次文件分享数量",
   "pricing.number_of_files_shared_per_time.hint": "分享时单次最多可分享的文件数量",
@@ -362,6 +374,8 @@
   "pricing.share_access_settings.hint": "可对分享链接设置文件访问权限，例如可下载可转存，或仅查看",
   "pricing.encrypted_sharing.label": "加密分享",
   "pricing.encrypted_sharing.hint": "可对分享链接设置访问密码（提取码）",
+  "pricing.whitelist_sharing.label": "分享可指定白名单",
+  "pricing.whitelist_sharing.hint": "可设置素材智能分享给系统指定的白名单账户",
   "pricing.sharing_link_management.label": "分享链接管理",
   "pricing.sharing_link_management.hint": "可在【管理后台】-【分享管理】里查看所有分享记录",
   "pricing.share_link_to_access_data_dashboard.label": "分享链接访问数据看板",
@@ -396,12 +410,12 @@
   "pricing.baidu_network_disk_synchronization.hint": "支持一键同步百度网盘中的素材资源",
   "pricing.file_job_collection_function.label": "文件/作业收集功能",
   "pricing.file_job_collection_function.hint": "支持收集外部的文件资源",
-  "pricing.asset_tag.label": "素材标签",
+  "pricing.asset_tag.label": "文件标签",
   "pricing.asset_tag.hint": "可为单个文件或批量添加标签，标签管理支持2层级",
   "pricing.smart_folder.label": "智能文件夹",
   "pricing.smart_folder.hint": "可根据设置的筛选条件，自动把符合条件的文件放在这个文件夹中，且设置好后里面的内容会实时更新",
-  "pricing.asset_score.label": "素材评分",
-  "pricing.asset_score.hint": "可对素材进行 1~5 星评分",
+  "pricing.asset_score.label": "文件评分",
+  "pricing.asset_score.hint": "可对文件进行 1~5 星评分",
   "pricing.import_eagle.label": "导入 Eagle 文件",
   "pricing.import_eagle.hint": "支持 Eagle 数据迁移到 MuseDAM",
   "pricing.color_filter.label": "筛选颜色",
@@ -410,11 +424,15 @@
   "pricing.duplicate_check.hint": "文件上传时支持查重处理",
   "pricing.similar_asset_check.label": "空间内重复文件检测",
   "pricing.similar_asset_check.hint": "已上传进空间内的文件支持查重",
-  "pricing.batch_edit.label": "批量编辑:标签、名称、文件夹、星级",
-  "pricing.batch_edit.hint": "多选文件进行编辑，即可批量编辑“备注”、“链接”、“标签”、“评分” 更高效管理素材",
+  "pricing.batch_edit.label": "批量编辑",
+  "pricing.batch_edit.hint": "多选文件进行编辑，即可批量编辑“名称”、“备注”、“链接”、“标签”、“评分”等， 更高效管理素材",
   "pricing.batch_rename.label": "批量重命名",
   "pricing.batch_rename.hint": "可按序号、日期、标签、原名称、替换等规则进行批量重命名",
-  "pricing.batch_tag.label": "批量打标",
+  "pricing.custom_metadata.label": "元数据自定义字段",
+  "pricing.custom_metadata.hint": "用户可自定义配置素材库内字段类型及内容，如文本、单选、多选、人员、日期、数字、超链接等。",
+  "pricing.compliance_check.label": "合规检测",
+  "pricing.compliance_check.hint": "法律涉黄暴政检测、基础的广告法检测、以及法律上的违规词检测",
+  "pricing.batch_tag.label": "文件夹自动标签",
   "pricing.batch_tag.hint": "可对文件夹设置自动标签，文件夹内素材会自动被添加上相关标签",
   "pricing.team_folder_auth.label": "不同文件夹可按不同成员分配权限",
   "pricing.team_folder_auth.hint": "不同文件夹可按不同成员分配权限：可对不同文件夹设置成员的相应权限，如编辑、查看等",
@@ -424,7 +442,7 @@
   "pricing.C4D.hint": "支持 C4D 模型文件",
   "pricing.audio.label": "音频 | mp3、m4a",
   "pricing.audio.hint": "支持的音频文件格式",
-  "pricing.team_material_library_management.label": "团队素材库管理",
+  "pricing.team_material_library_management.label": "共享资产库管理",
   "pricing.team_material_library_management.hint": "团队空间素材库管理",
   "pricing.team_folder_member_permissions.label": "团队文件夹成员权限",
   "pricing.team_folder_member_permissions.hint": "在团队不同的文件夹上可设置不同的成员访问权限",
@@ -432,19 +450,23 @@
   "pricing.team_folder_department_permissions.hint": "在团队不同的文件夹上可设置不同的部门访问权限",
   "pricing.member_storage_space_upper_limit_management.label": "成员存储空间上限管理",
   "pricing.member_storage_space_upper_limit_management.hint": "可设置团队空间中各个成员的拥有的存储空间上限",
-  "pricing.transfer_asset_owners_in_bulk.label": "批量转移素材资源所有者",
+  "pricing.transfer_asset_owners_in_bulk.label": "批量转移文件资产所有者",
   "pricing.transfer_asset_owners_in_bulk.hint": "可批量将素材库中的资源转移所有者",
+  "pricing.project_management.label": "项目管理",
+  "pricing.project_management.hint": "项目/任务管理，可添加审批人员、截止日期",
+  "pricing.approval_entry.label": "审批入库",
+  "pricing.approval_entry.hint": "入库素材可指定审批人员",
   "pricing.custom_corporate_identity.label": "自定义企业标识",
   "pricing.custom_corporate_identity.hint": "自定义企业的标识，个性化展示",
   "pricing.turn_member_invitations_on_or_off.label": "开启或关闭成员邀请",
   "pricing.turn_member_invitations_on_or_off.hint": "开启或关闭团队的成员邀请功能",
   "pricing.set_member_invitation_validity_period.label": "设置成员邀请有效期",
   "pricing.set_member_invitation_validity_period.hint": "可设置成员邀请链接为：3天、7天、30天或永久有效",
-  "pricing.team_member_management.label": "团队成员管理",
+  "pricing.team_member_management.label": "企业成员管理",
   "pricing.team_member_management.hint": "可管理团队中的所有成员信息及权限",
   "pricing.invite_specific_members.label": "邀请指定成员",
   "pricing.invite_specific_members.hint": "具有较强加入管控，成员需使用指定手机号注册，或指定企业邮箱账号登录",
-  "pricing.team_department_management.label": "团队部门管理",
+  "pricing.team_department_management.label": "企业组织架构管理",
   "pricing.team_department_management.hint": "可管理团队部门及部门中的成员",
   "pricing.import_members_and_departments_in_batches.label": "批量导入成员与部门",
   "pricing.import_members_and_departments_in_batches.hint": "可批量导入或导出成员与部门，支持 Excel (.xlsx)、CSV (.csv) 文件",
@@ -493,9 +515,18 @@
   "pricing.questions.link.des": " 里提供了更多的信息及教程。",
   "pricing.points.validity": "点数有效期",
   "pricing.points.validity.hint": "MuseAI 点数分为套餐点数和永久性点数，套餐点数跟随套餐周期发放；永久性点数可额外购买，用完即止",
-  "pricing.ai_search.label": "AI 智能搜索",
+  "pricing.ai_search.label": "智能搜索",
   "pricing.ai_search.hint": "可通过 AI 智能解析的内容对素材进行智能搜索",
-  "pricing.ai_analysis.label": "AI 智能解析",
+  "pricing.ai_smart_rename.label": "AI 智能重命名",
+  "pricing.ai_auto_smart_parsing.label": "AI 自动智能解析",
+  "pricing.ai_custom_smart_parsing.label": "AI 自定义智能解析",
+  "pricing.ai_auto_smart_tagging.label": "AI 自动智能标签",
+  "pricing.ai_custom_smart_tagging.label": "AI 自定义智能标签",
+  "pricing.ai_smart_rename.hint": "根据素材图片内容含义，AI 进行智能重命名",
+  "pricing.ai_auto_smart_parsing.hint": "上传素材时，AI 将自动对图片、设计源文件等有预览图的素材进行自动智能解析",
+  "pricing.ai_custom_smart_parsing.hint": "素材可按用户的自定义指定字段进行智能解析",
+  "pricing.ai_auto_smart_tagging.hint": "上传素材时，AI 将自动对图片、设计源文件等有预览图的素材进行自动智能打标",
+  "pricing.ai_custom_smart_tagging.hint": "素材可按用户的自定义指定需求进行智能打标",
   "pricing.ai_analysis.hint": "可对系统内的图像素材进行智能解析，例如画面描述、主体、配色方案等",
   "pricing.ai_content.label": "AI 内容创作",
   "pricing.ai_content.hint": "可对素材或文件夹进行内容总结、文章撰写等",
