support user session fetching

--- a/src/app/i18n/locales/en-US/header.json
+++ b/src/app/i18n/locales/en-US/header.json
@@ -41,6 +41,7 @@
   "nav-bar.extension": "Extension",
   "nav-bar.careers": "Careers",
   "button.login": "Login",
+  "button.enter": "Enter",
   "more-features.ai-content-creation.title": "Content Creation",
   "more-features.inspiration-collection.title": "File Collection",
   "more-features.inspiration-collection.description": "Web browser Extension",
