--- a/src/app/i18n/locales/zh-CN/header.json
+++ b/src/app/i18n/locales/zh-CN/header.json
@@ -41,6 +41,7 @@
   "nav-bar.extension": "采集插件",
   "nav-bar.careers": "工作机会",
   "button.login": "登录",
+  "button.enter": "进入",
   "more-features.ai-content-creation.title": "内容创作",
   "more-features.inspiration-collection.title": "灵感采集",
   "more-features.inspiration-collection.description": "网页浏览器插件",
